# fasade-on-fhir

./: .dockerignore  .gitignore  Dockerfile  README.md  api.py  config_example.yml  main.py  mappings_example.yml  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: docker-publish.yml  python-app.yml
configs/: .gitignore  config_example.yml  mapping_example.yml
erkeronfhir/: config.py  fhir_helpers.py  responses.py  service.py
erkeronfhir/convert/: __init__.py  constants.py  generate.py  metadata.py
erkeronfhir/redcap/: __init__.py  connector.py
erkeronfhir/test/convert/: test_generate.py
erkeronfhir/tests/convert/: test_generate.py
fasadeonfhir/: api.py  auth.py  config.py  service.py
fasadeonfhir/convert/: generate.py
fasadeonfhir/redcap/: provider.py
fasadeonfhir/tests/convert/: test_generate.py
redcaponfhir/: __main__.py  api.py  config.py  helpers.py  service.py
redcaponfhir/auth/: __init__.py  auth.py
redcaponfhir/convert/: __init__.py  generate.py  metadata.py
redcaponfhir/redcap/: __init__.py  connector.py  provider.py
redcaponfhir/tests/convert/: test_generate.py
src/erkeronfhir/convert/: generate.py
